feat: add partner updates and privacy PIN locks