@@ -14,15 +14,19 @@ import java.net.HttpURLConnection;
 import java.net.URL;
 import java.net.URLEncoder;
 import java.nio.charset.StandardCharsets;
+import java.util.Arrays;
 
 final class DrawingApi {
     private DrawingApi() {}
     private static final int MAX_IMAGE = 2 * 1024 * 1024;
     static boolean configured() {
         return BuildConfig.SUPABASE_URL.startsWith("https://") &&
-            BuildConfig.SUPABASE_KEY.length() > 20 && BuildConfig.WEB_BASE_URL.startsWith("https://");
+            BuildConfig.SUPABASE_KEY.length() > 20;
     }
-    private static String enc(String value) { return URLEncoder.encode(value, StandardCharsets.UTF_8); }
+    private static String enc(String value) {
+        try { return URLEncoder.encode(value, "UTF-8"); }
+        catch (java.io.UnsupportedEncodingException error) { throw new AssertionError(error); }
+    }
     private static String base() { return BuildConfig.SUPABASE_URL.replaceAll("/+$", ""); }
 
     private static final class Reply {
@@ -60,6 +64,7 @@ final class DrawingApi {
     }
 
     static boolean pushServerConfigured() {
+        if (!BuildConfig.WEB_BASE_URL.startsWith("https://")) return false;
         try {
             Reply result = call("GET", BuildConfig.WEB_BASE_URL.replaceAll("/+$", "") + "/api/drawing-notes/push-status", null, null, null);
             return result.status == 200 && new JSONObject(result.text()).optBoolean("configured", false);
@@ -86,7 +91,7 @@ final class DrawingApi {
         return new JSONObject(new String(claim, StandardCharsets.UTF_8)).getString("sub");
     }
 
-    static SessionStore.Session session(Context context) throws Exception {
+    static synchronized SessionStore.Session session(Context context) throws Exception {
         SessionStore.Session current = SessionStore.load(context);
         if (current == null) throw new IllegalStateException("Sign in to see your partner's drawing.");
         if (current.expiresAt > System.currentTimeMillis() + 60000) return current;
@@ -128,6 +133,39 @@ final class DrawingApi {
         if (result.status < 200 || result.status >= 300) throw new IllegalStateException("Could not unregister this device. Connect to the internet and try again.");
     }
 
+    static JSONArray notifications(Context context) throws Exception {
+        SessionStore.Session session = session(context);
+        String path = "/rest/v1/notifications?select=id,title,category,read_at,created_at"
+            + "&recipient_id=eq." + enc(session.userId) + "&order=created_at.desc&limit=30";
+        Reply result = call("GET", base() + path, session.access, null, null);
+        if (result.status != 200) throw new IllegalStateException("Could not refresh notifications.");
+        JSONArray rows = new JSONArray(result.text());
+        context.getSharedPreferences("notification-cache", Context.MODE_PRIVATE)
+            .edit().putString(session.userId, rows.toString()).apply();
+        return rows;
+    }
+
+    static JSONArray cachedNotifications(Context context) {
+        SessionStore.Session session = SessionStore.load(context);
+        if (session == null) return new JSONArray();
+        String cached = context.getSharedPreferences("notification-cache", Context.MODE_PRIVATE)
+            .getString(session.userId, "[]");
+        try { return new JSONArray(cached); }
+        catch (Exception ignored) { return new JSONArray(); }
+    }
+
+    static void clearNotificationCache(Context context, String userId) {
+        context.getSharedPreferences("notification-cache", Context.MODE_PRIVATE).edit().remove(userId).apply();
+    }
+
+    static void markNotificationRead(Context context, String notificationId) throws Exception {
+        SessionStore.Session session = session(context);
+        Reply result = call("POST", base() + "/rest/v1/rpc/mark_notification_read",
+            session.access, new JSONObject().put("notification_id", notificationId).toString(), null);
+        if (result.status != 200)
+            throw new IllegalStateException("Could not mark this update as read.");
+    }
+
     static String refreshLatest(Context context) throws Exception {
         SessionStore.Session session = session(context);
         String query = "/rest/v1/drawing_notes?select=id,object_path,sent_at&recipient_id=eq." + enc(session.userId) +
@@ -158,5 +196,87 @@ final class DrawingApi {
         }
         DrawingWidget.renderAll(context);
         return "Latest drawing is ready on your home screen.";
+    }
+
+    private static Reply upload(String path, String token, byte[] png) throws Exception {
+        if (png.length < 100 || png.length > MAX_IMAGE) throw new IllegalStateException("Drawing must be under 2 MB.");
+        HttpURLConnection connection = (HttpURLConnection) new URL(base() +
+            "/storage/v1/object/drawing-notes/" + path).openConnection();
+        connection.setConnectTimeout(10000); connection.setReadTimeout(20000);
+        connection.setRequestMethod("POST"); connection.setDoOutput(true);
+        connection.setRequestProperty("apikey", BuildConfig.SUPABASE_KEY);
+        connection.setRequestProperty("Authorization", "Bearer " + token);
+        connection.setRequestProperty("Content-Type", "image/png");
+        connection.setFixedLengthStreamingMode(png.length);
+        try (java.io.OutputStream output = connection.getOutputStream()) { output.write(png); }
+        int status = connection.getResponseCode();
+        try (InputStream input = status < 400 ? connection.getInputStream() : connection.getErrorStream()) {
+            ByteArrayOutputStream body = new ByteArrayOutputStream();
+            if (input != null) {
+                byte[] buffer = new byte[1024]; int count;
+                while ((count = input.read(buffer)) >= 0 && body.size() < 8192) body.write(buffer, 0, count);
+            }
+            return new Reply(status, body.toByteArray());
+        } finally { connection.disconnect(); }
+    }
+
+    static void sendDrawing(Context context, String id, byte[] png) throws Exception {
+        if (!id.matches("[0-9a-fA-F-]{36}")) throw new IllegalArgumentException("Invalid drawing ID.");
+        Bitmap bitmap = BitmapFactory.decodeByteArray(png, 0, png.length);
+        if (bitmap == null || bitmap.getWidth() != 640 || bitmap.getHeight() != 480)
+            throw new IllegalStateException("The drawing canvas is invalid.");
+        bitmap.recycle();
+        SessionStore.Session current = session(context);
+        String path = current.userId + "/" + id + ".png";
+        Reply existing = call("GET", base() + "/rest/v1/drawing_notes?select=id,status&id=eq." + enc(id),
+            current.access, null, null);
+        if (existing.status != 200) throw new IllegalStateException("Could not check the drawing send state.");
+        JSONArray rows = new JSONArray(existing.text());
+        if (rows.length() > 0 && "ready".equals(rows.getJSONObject(0).optString("status"))) return;
+        if (rows.length() == 0) {
+            Reply members = call("GET", base() +
+                "/rest/v1/couple_memberships?select=couple_id,user_id&left_at=is.null",
+                current.access, null, null);
+            if (members.status != 200) throw new IllegalStateException("Could not check your partner.");
+            JSONArray list = new JSONArray(members.text());
+            String couple = null, partner = null;
+            for (int i = 0; i < list.length(); i++) {
+                JSONObject row = list.getJSONObject(i);
+                if (current.userId.equals(row.getString("user_id"))) couple = row.getString("couple_id");
+            }
+            if (couple == null) throw new IllegalStateException("Connect your partner before sending.");
+            for (int i = 0; i < list.length(); i++) {
+                JSONObject row = list.getJSONObject(i);
+                if (couple.equals(row.getString("couple_id")) &&
+                    !current.userId.equals(row.getString("user_id"))) partner = row.getString("user_id");
+            }
+            if (partner == null) throw new IllegalStateException("Your partner is not connected.");
+            JSONObject note = new JSONObject().put("id", id).put("couple_id", couple)
+                .put("author_id", current.userId).put("recipient_id", partner)
+                .put("object_path", path);
+            Reply prepared = call("POST", base() + "/rest/v1/drawing_notes", current.access,
+                note.toString(), "return=minimal");
+            if (prepared.status < 200 || prepared.status >= 300)
+                throw new IllegalStateException("Could not prepare the drawing for your partner.");
+        }
+        Reply sent = upload(path, current.access, png);
+        if (sent.status < 200 || sent.status >= 300) {
+            Reply stored = call("GET", base() + "/storage/v1/object/authenticated/drawing-notes/" +
+                path, current.access, null, null);
+            if (stored.status != 200 || !Arrays.equals(stored.body, png))
+                throw new IllegalStateException("Could not upload the drawing.");
+        }
+        Reply published = call("PATCH", base() + "/rest/v1/drawing_notes?id=eq." + enc(id) +
+            "&status=eq.pending", current.access, new JSONObject().put("status", "ready").toString(),
+            "return=representation");
+        if (published.status < 200 || published.status >= 300)
+            throw new IllegalStateException("Could not finish sending the drawing.");
+        if (new JSONArray(published.text()).length() == 0) {
+            Reply confirmed = call("GET", base() + "/rest/v1/drawing_notes?select=id,status&id=eq." + enc(id),
+                current.access, null, null);
+            if (confirmed.status != 200 || new JSONArray(confirmed.text()).length() == 0 ||
+                !"ready".equals(new JSONArray(confirmed.text()).getJSONObject(0).optString("status")))
+                throw new IllegalStateException("Could not confirm the drawing was sent.");
+        }
     }
 }
